clusters/homelab/apps/rust-plus-provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-plus-provider
  namespace: rust-plus-provider
spec:
  selector:
    app: rust-plus-provider
  ports:
    - port: 80
      targetPort: 9443
